Rework of tables and views; SerienJunkies.de import
git-svn-id: svn://kiwinb/dev/media/trunk@180 d2417a56-bda1-9d42-b968-744157609d61